<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Wallpaperer</string>
    <string name="toast_wallpaper_changing">Changing wallpaper</string>
    <string name="next_wallpaper">Change wallpaper</string>
    <string name="add_button_description">Select image(s) from a file chooser.</string>
    <string name="text_sample_filename">sample_file_name.spl</string>
    <string name="work_random_wallpaper_id">work_random_wallpaper</string>
    <string name="loading_image">Loading image</string>
    <string name="image_type_default_text">image/png</string>
    <string name="size_default_text">3MB</string>
    <string name="date_default_text">2022–10–24</string>
    <string name="file_size">%4.2f MiB</string>
    <string name="image_gradient">Image gradient</string>
    <string name="remove_all">Remove all</string>
    <string name="str_button_switch">Switch</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="preference_category_display">Display</string>

    <string name="preference_idle_description">Avoid disruption. If enabled wallpaper will not change while you are using your device.</string>
    <string name="preference_idle_title">Sleep only</string>
    <string name="preference_compress_description">Save space by compressing images. Reduces wallpaper image quality.</string>
    <string name="preference_compress_title">Recompress images</string>
    <string name="preference_columns_description">Select the max number of thumbnail columns to display. Depending on display size, fewer columns may be shown.</string>
    <string name="preference_columns_title">Thumbnail columns</string>
    <string name="preference_category_performance">Performance</string>
    <string name="preference_columns">preference_columns</string>
    <string name="preference_idle">preference_idle</string>
    <string name="preference_recompress">preference_recompress</string>
    <string name="toast_add_an_image_toggle">Add an image before enabling the wallpaper changer.</string>
    <string name="preference_time_delay">preference_time_delay</string>
    <string name="toast_delay_too_short">Delay too short. Using 1 minute instead.</string>
    <string name="delay_preference_summary">Time between wallpaper changes.</string>
    <string name="delay_preference_title">Wallpaper delay</string>
    <string name="preference_card_stats">preference_card_stats</string>
    <string name="title_preference_card_stats">Show wallpaper metadata</string>
    <string name="msg_no_images_to_action">No images. Nothing to do.</string>
    <string name="dialog_title_delete_all">Remove all images?</string>
    <string name="dialog_msg_delete_all">This will remove all images. You will need to re-add them from their original sources.</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_button_yes_delete_all">Yes, remove them</string>
    <string name="dialog_button_yes_add_intent">Yes</string>
    <string name="dialog_title_add_intent">Add new image(s)?</string>
    <string name="dialog_msg_add_intent_message">An app sent you images. Would you like to add them to your list?</string>
    <string name="toast_changer_active">Wallpaper changer is active</string>
    <string name="intent_chooser_select_images">Select images(s)</string>
    <string name="msg_swipe_item_removed">Item was removed from the list.</string>
    <string name="snack_action_undo">UNDO</string>
    <string name="dialog_processing_images">Processing images…</string>
    <string name="first_time">first_time</string>
    <string name="loading_error_fnf">Unable to save image. The selected source image has disappeared. Please try again.</string>
    <string name="loading_error_out_of_space">Out of storage space</string>
    <string name="loading_error_not_an_image">One or more file(s) not an image.</string>
    <string name="loading_error_precheck_low_space">Cannot add file. Storage space is low. Free some space or consider moving this app to external storage.</string>
    <string name="loading_error_cannot_mkdir">Unable to save image. Cannot create storage directory.</string>
    <string name="preference_optimization_title">Battery optimization settings</string>
    <string name="preference_optimization_summary">Wallpaper delay may be unpredictable due to battery optimization settings. Click here and remove this app from the optimized apps list.</string>
    <string name="preference_optimization_key">preference_battery_optimization_intent</string>
    <string name="preference_optimization_summary_good">Good news! Battery optimization is disabled resulting in accurate wallpaper delays.</string>
    <string name="delay_dialog_title">Set delay (hh:mm)</string>
    <string name="preference_image_crop">preference_image_crop</string>
    <string name="preference_image_crop_title">Crop Image to Fill Screen</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="about_social_title">Find this app</string>
    <string name="about_github_user">cedarrapidsboy</string>
    <string name="app_simple_name">Wallpaperer</string>
    <string name="about_storage_title">Wallpaper Storage Allowance</string>
    <string name="about_app_description">Automatically change your home screen wallpaper on a predefined interval.</string>
    <string name="about_storage_details">{0} of {1} GiB available</string>
    <string name="about_licenses" tools:ignore="TypographyDashes">medyo/android-about-page © 2016 Mehdi Sakout The MIT License (MIT) – bumptech/glide BSD, part MIT and Apache 2.0 licenses – zhanghai/AndroidFastScroll © 2019 Google LLC Apache 2.0 License – amlcurran/ShowcaseView © 2012-2014 Alex Curran Apache 2.0 License – stfalcon-studio/StfalconImageViewer © 2018 stfalcon.com Apache 2.0 License</string>
    <string name="preference_worker_last_change">worker_last_change</string>
    <string name="preference_worker_last_queue">worker_last_queue</string>
    <string name="showcase_add_images">Add image(s)</string>
    <string name="showcase_click_add">Click the (+) to select one or more images to add to the wallpaper changer.</string>
    <string name="showcase_button_text">Next</string>
    <string name="showcase_changer">Activate the wallpaper changer</string>
    <string name="showcase_changer_text">Switch this \"on\" to start automatic wallpaper changing.</string>
    <string name="showcase_done">Got it</string>
    <string name="showcase_random">Surprise yourself!</string>
    <string name="showcase_random_text">Tap this to immediately change the wallpaper to a random image from your list.</string>
    <string name="showcase_manage">Manage your images here</string>
    <string name="showcase_manage_text">Swipe images to delete them.\nClick images to view them.\nUse the share button to send the image somewhere.\nUse the \"next\" button to set it as wallpaper immediately.</string>
    <string name="set_wallpaper_no_images">Please add an image. Nothing to do.</string>
    <string name="set_wallpaper_missing_image">Image no longer exists. Thumbnail removed.</string>
    <string name="date_added">Date Added</string>
    <string name="date_sort">Date Created</string>
    <string name="image_name">Image Name</string>
    <string name="image_size">Image Size</string>
    <string name="sort">Sort</string>
    <string name="last_wallpaper">last_wallpaper</string>
    <string name="last_wallpaper_pos">last_wallpaper_pos</string>
    <string name="custom">Custom</string>
    <string name="menu_shuffle">Shuffle</string>
    <string name="shuffle_confirmation">Are you sure you want the shuffle the images? This will affect the %1$s image list. The view will be switched to the %1$s image list.</string>
    <string name="copy_confirmation">Are you sure you want to replace the %1$s image list with the currently displayed list? This will (almost definitely) change the order of the images in the %1$s image list.</string>
    <string name="shuffle_confirmation_title">Shuffle images?</string>
    <string name="go_to_current">Go to current</string>
    <string name="dialog_button_shuffle_yes">Yes, shuffle them</string>
    <string name="sort_action_copy_list">Copy</string>
    <string name="copy_list_yes">Yes</string>
    <string name="about_group_licenses">Licenses</string>
    <string name="action_share_no_apps_configured">No apps configured to view this item.</string>
    <string name="menu_export">Export Images</string>
    <string name="menu_import">Import Images</string>
    <string name="intent_chooser_select_imports">Select export file(s)</string>
    <string name="preference_category_backup">Backup</string>
    <string name="preference_import_title">Import</string>
    <string name="preference_import_summary">Load images from one or more previously exported ZIP file(s). This will not delete existing images.</string>
    <string name="preference_import_key">preference_import</string>
    <string name="preference_export_title">Export</string>
    <string name="preference_export_summary">Copy all of the images to one or more ZIP file(s). The files can be found in this device\'s Downloads directory.</string>
    <string name="preference_export_key">preference_export</string>
    <string name="scroll_to_active_image">Scroll to active image.</string>
    <string name="preview_of_the_active_image">Preview of the active image.</string>
    <string name="location_icon">Location icon.</string>
    <string name="error_sharing_image">"Error sharing image: "</string>
    <string name="of">" of "</string>

</resources>