<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/preference_category_display">

        <ListPreference
            android:defaultValue="2"
            android:entries="@array/thumbnail_columns"
            android:entryValues="@array/thumbnail_columns"
            android:key="@string/preference_columns"
            android:summary="@string/preference_columns_description"
            android:title="@string/preference_columns_title" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/preference_card_stats"
            android:title="@string/title_preference_card_stats"
            />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/preference_category_performance">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/preference_idle"
            android:summary="@string/preference_idle_description"
            android:title="@string/preference_idle_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/preference_recompress"
            android:summary="@string/preference_compress_description"
            android:title="@string/preference_compress_title" />
        <com.moosedrive.wallpaperer.DialogTimePreference
            android:key="@string/preference_time_delay"
            android:title="@string/delay_preference_title"
            android:defaultValue="00:15"
            android:summary="@string/delay_preference_summary"/>
        <Preference
            android:title="@string/preference_optimization_title"
            android:summary="@string/preference_optimization_summary"
            android:key="@string/preference_optimization_key"
            />
    </PreferenceCategory>

</PreferenceScreen>