<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_switch"
        android:checkable="true"
        android:checked="false"
        android:title="@string/str_button_switch"
        app:actionLayout="@layout/switch_item"
        app:showAsAction="always" />
    <item
        android:id="@+id/next_wallpaper"
        android:icon="@drawable/ic_baseline_change_circle_24"
        android:title="@string/next_wallpaper"
        app:showAsAction="always" />
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_baseline_sort_24"
        android:title="@string/sort"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_goto"
        android:title="@string/go_to_current"
        android:visible="false"/>
    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/remove_all"
        android:icon="@drawable/ic_baseline_delete_forever_24"
        android:title="@string/remove_all"
        app:showAsAction="never" />
    <group>
        <item
            android:id="@+id/menu_export"
            android:title="@string/menu_export" />
        <item
            android:id="@+id/menu_about"
            android:title="@string/about" />
    </group>
</menu>